Update font-awesome.css link

--- a/public/auth/index.html
+++ b/public/auth/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 <link rel="stylesheet" type="text/css" href="/fonts/roboto.css">
 <link rel="stylesheet" type="text/css" href="/modules/MMM-Strava/MMM-Strava.css">
-<link rel="stylesheet" type="text/css" href="/vendor/node_modules/font-awesome/css/font-awesome.min.css">
+<link rel="stylesheet" type="text/css" href="/vendor/css/font-awesome.css">
 
 <style>
 html {
